<resources>
    <string name="app_name">Mas Tur</string>
    <string name="next">Next</string>
    <string name="sejarah">Sejarah</string>
    <string name="kuliner">Kuliner</string>
    <string name="penginapan">Penginapan</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nav_home">Home</string>
    <string name="nav_nearby">Nearby</string>
    <string name="nav_profil">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_sejarah">Sejarah</string>
    <string name="btn_kuliner">Kuliner</string>
    <string name="btn_penginapan">Penginapan</string>
    <string name="name">name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_kuliner">ScrollingActivity</string>
    <string name="todo">TODO</string>
    <string name="harga_kuliner">Harga Kuliner</string>
    <string name="location_kuliner">Location Kuliner</string>
    <string-array name="data_name_sejarah">
        <item>Banyumas</item>
        <item>Purwokerto</item>
        <item>Baturraden</item>
    </string-array>
    <string-array name="data_description_sejarah">
        <item>Menurut cerita rakyat mengenai Sejarah Banyumas, asal mula  nama Banyumas ada beberapa versi cerita. Diantaranya yaitu:Kayu Emas yang Terseret Arus Sungai
Sungai Serayu
Ada yang menceritakan bahwa dahulu ketika rakyat sedang proses melakukan pembangunan pemerintahan, ada kejadian yang tidak diduga.
Yaitu ada kayu besar (Pohon besar) Terseret arus air di sungai besar, konon sungai tersebut adalah Sungai Serayu. Kayu itu bernama Kayu Emas (Pohon Emas).
Dan kayu pohon tersebut diceritakan berasal dari Desa Karang Jambu, Kecamata Kecobong, Kabupaten Purbalingga.
Dan pohon yang besar tersebut, berhenti di sekitar lokasi yang sedang dilakukan pembangunan. Kejadian itu mengambil perhatian Adipati Mrapat (Pemimpin rakyat pada zaman dahulu), dan akhirnya menyuruh rakyatnya untuk mengambil kayu tersebut.
Dan kemudian mempunyai keputusan untuk menjadikan kayu pohon tersebut sebagai saka guru Balai si Panji (Tiang utama). Karena kayu pohon itu bernama Pohon Emas, yang ditemukan di arus air makan Adipati Mrapat menamai daerah yang sedang dibangun dengan nama Banyumas.
Banyu adalah Bahasa Jawa dari air, dan mas berasal dari nama Pohon Emas yang terseret arus air Sungai Serayu tadi, digabungkan jadi kata Banyumas.

Sungai Emas
Diceritakan nama Banyumas di ambil dari kisah Adipati Mrapat yang sedang melakukan perjalanan bersama prajuritnya dari Wirasaba. Di dalam perjalanannya Adipati Mrapat melewati sungai.
Nama Sungai tersebut adalah Sungai Mas, dan Adipati Mrapat memutuskan berhenti untuk istirahat dan membuat pesanggrahan, sampai akhirnya Adipati Mrapat menamainya dengan nama Banyumas.
Berharganya Air Seperti Perhiasan Emas Air cerita rakyat tentang seorang tamu yang menunggang kuda. Pada waktu itu nama daerahnya adalah Slarong. Ceritanya tamu tersebut bertingkah laku aneh di daerah tersebut, dan membuat warga resah dengan tingkah lakunya.
Namun, entah kenapa bersamaan saat itu daerah tersebut mengalami kemarau panjang. Sampai aliran sungai yang menjadi sumber air pun mengalami kekeringan.
Akhirnya Pemimpin Daerah tersebut mencurigai tingkah laku orang tersebut dan mengambil keputusan untuk membelenggu tamu tersebut.
Dan entah kebetulan atau bukan bersamaan dengan dibelenggunya tamu itu, hujan turun lebat. Warga daerah tersebut pun sangat senang sekali, sampai menganggap banyu berharga seperti emas.
Dan akhirnya daerah tersebut dinamai Banyumas. Dan tamu yang meresahkan tadi, karena dianggap membuat warga jadi resah, Adipati Mrapat pun mengambil keputusan untuk menyuruh pergi tamu tersebut.</item>
        <item>Purwokerto merupakan ibu kota Kabupaten Banyumas, Jawa Tengah, Indonesia. Yang letaknya di selatan Gunung Slamet, salah satu gunung berapi yang masih aktif di pulau Jawa, secara geografi Purwokerto terletak di koordinat 7°26′LU 109°14′BT.
Selain menjadi pusat pemerintahan Purwokerto berbatasan dengan Sokaraja. Jumlah penduduknya 292.782 jiwa pada tahun 2014. Berbagai julukan disandang kota ini. Mulai dari kota wisata, kota kripik, kota transit, kota pendidikan sampai kota pensiunan karena begitu banyaknya pejabat-pejabat negara yang pensiun dan akhirnya menetap di kota ini.
Di kota ini pula terdapat museum BRI, karena bank pertama kali berdiri ada disini dan pendiri bank ini adalah Raden Bei Aria Wirjaatmadja putra daerah Purwokerto.
Awal-awal abad XX. Pada suatu kota. Saat itu, babak baru dalam tata ruang tengah memasuki kota tersebut. Setiap jalan terlihat lebar. Pepohonan hijau nan rindang meneduhi para pejalan kaki ketika melintas di area pedestrian. Jalan-jalan terlihat asri. Sulit untuk membedakan antara jalan utama dengan jalan penghubung. Di depan gedung karesidenan, terdapat sebuah taman kota. Taman Merdeka, nama taman itu.
Sebuah taman untuk tempat warga kota melepas penat setelah kesibukan. Kota terasa nyaman bagi warganya. Inilah suasana Kota Purwokerto dengan perencanaan tata ruang yang baru. Suatu masa ketika Pulau Jawa mulai berkembang.
Saat itu, kota-kota di Pulau Jawa tengah mengalami lonjakan penduduk. Kota-kota meledak. Hampir di setiap kota, pertambahan penduduk sekitar 10 kali sampai 20 kali lipat. Kota-kota, mengalami masalah akut tentang tata ruang. Pemerintah kolonial Belanda kelimpungan menghadapi persoalan itu. Sibuk mencari model pembangunan bagi kota-kota di Jawa.
Saat kesibukan meliputi Pemerintah Kolonial Belanda, Herman Thomas Kartsen menjejakkan kaki di Semarang pada 1914. Kota yang juga tengah mengalami persoalan pertambahan penduduk. Dalam catatan W.F. Wertheim melalui buku Masyarakat Indonesia dalam Transisi, pertambahan penduduk di kota itu hampir mencapai seratus persen. Di kota tersebut, Kartsen menemui Henri Maclaine Pont. Pont adalah teman Kartsen semasa kuliah di Insitut Teknologi Delf, Amsterdam, Belanda.
Di Semarang, Pont mendirikan biro arsistek. Melalui Pont, Kartsen mendapat banyak informasi tentang keadaan Semarang dan kota lainnya. Kedatangan Kartsen di Semarang adalah guna merancang Kota Semarang dan kota-kota di Pulau Jawa.terdapat pabrik gula kalibagor.</item>
        <item>Baturraden merupakan salah satu obyek wisata andalan di Kabupaten Banyumas, Jawa Tengah. Sejak tahun 1928, Baturraden dikenal sebagai obyek wisata pegunungan. Pengunjung bisa menikmati keindahan pemandangan alam dan udara pegunungan yang sejuk dengan suhu antara 18°C-25°C. Dalam kondisi cuaca yang bagus dan cerah, pemandangan Kota Purwokerto, Nusakambangan, dan pantai Cilacap dapat terlihat dengan jelas dari puncak Baturraden.
Nama Baturraden berasal dari dua kata (bahasa Jawa), yaitu Batur (bukit, tanah, teman, pembantu) dan Raden (bangsawan). Bila digabung, kata “Baturraden” dapat bermakna: tanah yang datar atau tanah yang indah. Ada dua versi sejarah Batu Raden, yaitu versi Syekh Maulana Maghribi dan versi Kadipaten Kutaliman. Menurut versi yang pertama, Syekh Maulana Maghribi, Pangeran Rum yang berasal dari Turki dan beragama Islam, pernah merasa penasaran dengan cahaya terang misterius yang menjulang ke angkasa dan bersinar di bagian timur. Sang Pangeran kemudian mencari asal cahaya tersebut. Singkat cerita, setelah melakukan pendakian hingga ke puncak sebuah gunung, Sang Pangeran melihat ada seorang pertapa Buddha yang bersandar pada sebuah pohon jambu yang memancarkan sinar cahaya ke atas. Lokasi ini kemudian dikenal dengan sebutan Baturraden. Sedangkan menurut versi kedua, cerita Baturraden terkait dengan kisah cinta antara anak perempuan Adipati Kutaliman dengan pembantunya yang menjaga kuda.</item>
    </string-array>
    <string-array name="data_location_sejarah">
        <item>Banyumas, Jawa Tengah</item>
        <item>Purwokerto, Banyumas</item>
        <item>Dusun III Kalipagu, Ketenger, Kec. Baturaden, Kabupaten Banyumas, Jawa Tengah</item>
    </string-array>
    <string-array name="data_photo_sejarah">
        <item>http://3.bp.blogspot.com/-pzjtKy12Ox4/Ty0Bt6S5aRI/AAAAAAAAASA/NXYwFiTgucA/s320/Logo+Kabupaten+Banyumas.jpg</item>
        <item>https://initu.id/wp-content/uploads/2018/05/Sejarah-Wisata-Kuliner-Purwokerto-Ibu-Kota-Banyumas.jpg</item>
        <item>https://cdns.klimg.com/merdeka.com/i/w/news/2015/12/27/642689/540x270/isi-hari-libur-ribuan-wisatawan-serbu-lokawisata-baturaden.jpg</item>
    </string-array>
    <string-array name="data_name_kuliner">
        <item>Tempe Mendoan</item>
        <item>Getuk Sokaraja</item>
        <item>Nopia</item>
    </string-array>
    <string-array name="data_location_kuliner">
        <item>Sekitar banyumas</item>
        <item>Sokaraja, Banyumas</item>
        <item>Banyumas</item>
    </string-array>
    <string-array name="data_harga_kuliner">
        <item>Rp. 1000</item>
        <item>Rp. 30.000/kg</item>
        <item>Rp. 20.000/kg</item>
    </string-array>
    <string-array name="data_photo_kuliner">
        <item>https://assets-a1.kompasiana.com/items/album/2017/01/30/capture-png-588ec32c5a7b611b07b333f7.png</item>
        <item>https://cdn.idntimes.com/content-images/community/2020/04/66453341-1280850608743908-8841273118929453056-n-0a93a9c021670d2e276e80fa9c1a71d4_600x400.jpg</item>
        <item>https://www.gotravelly.com/blog/wp-content/uploads/2018/05/nopia-khas-banyumas.jpg</item>
    </string-array>
    <string name="harga_penginapan">harga penginapan</string>
    <string name="location_penginapan">harga penginapan</string>
    <string name="Phone">Phone</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="password">Password</string>
    <string name="simpan">Simpan</string>
    <string name="logout">Logout</string>
</resources>