<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@android:color/darker_gray"
        android:contentDescription="@string/description" />


    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_below="@+id/img_item_photo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_kuliner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/btn_sejarah"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_sejarah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/btn_kuliner"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_penginapan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/btn_penginapan"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>